--- a/generators/templates/angular/base/package.json
+++ b/generators/templates/angular/base/package.json
@@ -53,6 +53,8 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "gulp-gzip": "^1.4.2",
+    "gulp-uglify": "^3.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
