--- a/generators/templates/angular/base/tsconfig.json
+++ b/generators/templates/angular/base/tsconfig.json
@@ -2,7 +2,10 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "sourceMap": true,
+    "sourceMap": false,
+    "removeComments": true,
+    "pretty": false,
+
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
