--- a/generators/templates/angular/base/package.json
+++ b/generators/templates/angular/base/package.json
@@ -41,30 +41,74 @@
     "@ngrx/store": "^5.2.0",
     "@ngrx/store-devtools": "^5.2.0",
 
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.5",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.7",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "gulp-gzip": "^1.4.2",
-    "gulp-uglify": "^3.0.0",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "@angular/cli": "^1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/language-service": "^5.2.10",
+    "@compodoc/compodoc": "^1.1.2",
+    "@ngtools/webpack": "1.10.0",
+    "@types/hammerjs": "^2.0.35",
+    "@types/jasmine": "2.8.6",
+    "@types/node": "^9.6.5",
+    "@types/uglify-js": "^2.6.30",
+    "@types/webpack": "^3.8.8",
+    "add-asset-html-webpack-plugin": "~2.1.2",
+    "angular2-template-loader": "^0.6.2",
+    "assets-webpack-plugin": "^3.5.1",
+    "awesome-typescript-loader": "^3.5.0",
+    "codelyzer": "^4.2.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
+    "exports-loader": "^0.7.0",
+    "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "~3.0.2",
+    "file-loader": "^1.1.9",
+    "find-root": "^1.1.0",
+    "gh-pages": "^1.1.0",
+    "html-webpack-plugin": "^2.30.1",
+    "imports-loader": "^0.8.0",
+    "istanbul-instrumenter-loader": "~3.0.1",
+    "jasmine-core": "^2.99.1",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-remap-coverage": "^0.1.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.11",
+    "ngc-webpack": "^4.1.2",
+    "node-sass": "^4.8.3",
+    "npm-run-all": "^4.1.2",
+    "optimize-js-plugin": "0.0.4",
+    "parse5": "^4.0.0",
+    "preload-webpack-plugin": "^2.3.0",
+    "protractor": "^5.3.1",
+    "raw-loader": "0.5.1",
+    "rimraf": "~2.6.2",
+    "sass-loader": "^7.0.1",
+    "script-ext-html-webpack-plugin": "^1.8.8",
+    "source-map-loader": "^0.2.3",
+    "string-replace-loader": "~2.1.1",
+    "style-loader": "^0.20.3",
+    "to-string-loader": "^1.1.5",
+    "ts-node": "^6.0.0",
+    "tslib": "^1.9.0",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.5.3",
+    "typedoc": "^0.11.1",
+    "typescript": "~2.7.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-dev-server": "~2.11.1",
+    "webpack-inline-manifest-plugin": "4.0.0",
+    "webpack-merge": "~4.1.2"
   }
 }
